--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,27 +10,25 @@
         android:id="@+id/bsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:text="Submit"
-        app:layout_constraintBottom_toTopOf="@+id/testView"
+        app:layout_constraintBottom_toBottomOf="@+id/boardSizeView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/boardSizeView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/bsLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:text="Select Board Size:"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="32dp" />
+        tools:layout_editor_absoluteX="41dp" />
 
     <TextView
-        android:id="@+id/testView"
+        android:id="@+id/solutionView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -43,16 +41,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="272dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+    <EditText
+        android:id="@+id/boardSizeView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/testView"
-        app:layout_constraintEnd_toStartOf="@+id/bsButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintTop_toBottomOf="@+id/bsLabel"
+        tools:layout_editor_absoluteX="41dp" />
+
 </android.support.constraint.ConstraintLayout>
